# isaac_ros_object_detection

./: .gitattributes  .gitignore  README.md
docs/: training-detectnet-model-in-sim.md  tutorial-custom-model.md  tutorial-isaac-sim.md
gxf_isaac_detectnet/: CMakeLists.txt  package.xml
gxf_isaac_detectnet/gxf/deepstream_utils/include/: nvds_transform.h
gxf_isaac_detectnet/gxf/deepstream_utils/nvdsinfer/include/: nvdsinfer.h  nvdsinfer_context.h  nvdsinfer_custom_impl.h
gxf_isaac_detectnet/gxf/deepstream_utils/nvdsinferutils/dbscan/: EigenDefs.hpp  nvdsinfer_dbscan.cpp  nvdsinfer_dbscan.hpp
gxf_isaac_detectnet/gxf/deepstream_utils/nvdsinferutils/include/: nvdsinfer_dbscan.h  nvdsinfer_tlt.h  nvdsinfer_utils.h
gxf_isaac_detectnet/gxf/detectnet/: detectnet.cpp  detectnet_decoder.cpp  detectnet_decoder.hpp
isaac_ros_detectnet/: CMakeLists.txt  package.xml
isaac_ros_detectnet/config/: detectnet_node.yaml  hawk_config.pbtxt  isaac_sim_config.pbtxt  params.yaml  params_isaac_sim.yaml  params_realsense.yaml  peoplenet_config.pbtxt  quickstart_config.pbtxt  realsense_config.pbtxt  zedx_config.pbtxt
isaac_ros_detectnet/gxf/detectnet/: CMakeLists.txt  detectnet.cpp  detectnet_decoder.cpp
isaac_ros_detectnet/gxf/detectnet/deepstream_utils/include/: nvds_transform.h
isaac_ros_detectnet/gxf/detectnet/deepstream_utils/nvdsinfer/include/: nvdsinfer.h  nvdsinfer_context.h  nvdsinfer_custom_impl.h
isaac_ros_detectnet/gxf/detectnet/deepstream_utils/nvdsinferutils/dbscan/: EigenDefs.hpp  nvdsinfer_dbscan.cpp  nvdsinfer_dbscan.hpp
isaac_ros_detectnet/gxf/detectnet/deepstream_utils/nvdsinferutils/include/: nvdsinfer_dbscan.h  nvdsinfer_tlt.h  nvdsinfer_utils.h
isaac_ros_detectnet/gxf/detectnet/include/detectnet/: detectnet_decoder.hpp
isaac_ros_detectnet/include/isaac_ros_detectnet/: detectnet_decoder_node.hpp
isaac_ros_detectnet/include/nvdsinfer/: nvdsinfer.h
isaac_ros_detectnet/include/nvdsinferutils/dbscan/: EigenDefs.hpp  nvdsinfer_dbscan.hpp
isaac_ros_detectnet/include/nvdsinferutils/include/: nvdsinfer_dbscan.h
isaac_ros_detectnet/launch/: isaac_ros_detectnet.launch.py  isaac_ros_detectnet_core.launch.py  isaac_ros_detectnet_demo.launch.py  isaac_ros_detectnet_isaac_sim.launch.py  isaac_ros_detectnet_quickstart.launch.py  isaac_ros_detectnet_realsense.launch.py
isaac_ros_detectnet/resources/: detectnet_sample_config.pbtxt  isaac_sim_config.pbtxt  quickstart_config.pbtxt
isaac_ros_detectnet/resources/rosbags/detectnet_rosbag/: detectnet_rosbag_0.db3  metadata.yaml
isaac_ros_detectnet/scripts/: isaac_ros_detectnet_visualizer.py  setup_demo.sh  setup_model.sh
isaac_ros_detectnet/src/: detectnet_decoder_node.cpp  detectnet_tensorrt.py
isaac_ros_detectnet/test/: isaac_ros_detectnet_pol_test.py
isaac_ros_detectnet/test/dummy_model/: .gitignore
isaac_ros_detectnet/test/dummy_model/detectnet/: config.pbtxt  labels.txt
isaac_ros_detectnet/test/dummy_model/detectnet/1/: resnet18_detector.etlt
isaac_ros_detectnet/test/test_cases/single_detection/: detections.json  expected_detections.txt
isaac_ros_grounding_dino/: CMakeLists.txt  package.xml
isaac_ros_grounding_dino/include/isaac_ros_grounding_dino/: grounding_dino_decoder_node.hpp  grounding_dino_preprocessor_node.hpp
isaac_ros_grounding_dino/launch/: isaac_ros_grounding_dino.launch.py  isaac_ros_grounding_dino_core.launch.py
isaac_ros_grounding_dino/scripts/: isaac_ros_grounding_dino_text_tokenizer.py  isaac_ros_grounding_dino_visualizer.py
isaac_ros_grounding_dino/src/: grounding_dino_decoder_node.cpp  grounding_dino_preprocessor_node.cpp
isaac_ros_grounding_dino/test/: isaac_ros_grounding_dino_pol_test.py
isaac_ros_grounding_dino/test/test_cases/single_detection/: image.json
isaac_ros_grounding_dino_interfaces/: CMakeLists.txt  package.xml
isaac_ros_grounding_dino_interfaces/srv/: GetTextTokens.srv  SetPrompt.srv  SyncDataWithDecoder.srv
isaac_ros_grounding_dino_models_install/: CMakeLists.txt  package.xml
isaac_ros_grounding_dino_models_install/asset_scripts/: install_grounding_dino_models.sh
isaac_ros_peoplenet_models_install/: CMakeLists.txt  package.xml
isaac_ros_peoplenet_models_install/asset_scripts/: install_peoplenet_amr_rs.sh
isaac_ros_rtdetr/: CMakeLists.txt  launch_commands.md  package.xml
isaac_ros_rtdetr/include/isaac_ros_rtdetr/: rtdetr_decoder_node.hpp  rtdetr_preprocessor_node.hpp
isaac_ros_rtdetr/launch/: isaac_ros_rtdetr.launch.py  isaac_ros_rtdetr_core.launch.py  isaac_ros_rtdetr_isaac_sim.launch.py  isaac_ros_rtdetr_oss.launch.py  isaac_ros_yolov8_visualize.launch.py  yolov8_tensor_rt.launch.py
isaac_ros_rtdetr/scripts/: camera_info_scaler.py  detection_scaler.py  isaac_ros_rtdetr_visualizer.py
isaac_ros_rtdetr/src/: rtdetr_decoder_node.cpp  rtdetr_preprocessor_node.cpp
isaac_ros_rtdetr/test/: isaac_ros_rtdetr_pol_test.py
isaac_ros_rtdetr/test/dummy_model/: .gitignore  rtdetr_dummy_pol.onnx
isaac_ros_rtdetr_models_install/: CMakeLists.txt  package.xml
isaac_ros_rtdetr_models_install/asset_scripts/: install_rtdetr_models.sh
isaac_ros_yolonas/: CMakeLists.txt  launch_commands.md  package.xml
isaac_ros_yolonas/include/isaac_ros_yolonas/: yolonas_decoder_node.hpp
isaac_ros_yolonas/launch/: isaac_ros_yolov8_visualize.launch.py  yolov8_tensor_rt.launch.py
isaac_ros_yolonas/scripts/: isaac_ros_yolonas_visualizer.py
isaac_ros_yolonas/src/: yolonas_decoder_node.cpp
isaac_ros_yolov8/: CMakeLists.txt  launch_commands.md  package.xml
isaac_ros_yolov8/include/isaac_ros_yolov8/: yolov8_decoder_node.hpp
isaac_ros_yolov8/launch/: isaac_ros_yolov8_core.launch.py  isaac_ros_yolov8_isaac_sim.launch.py  isaac_ros_yolov8_visualize.launch.py  resize_image.launch.py  yolov8_tensor_rt.launch.py
isaac_ros_yolov8/scripts/: isaac_ros_yolov8_visualizer.py
isaac_ros_yolov8/src/: yolov8_decoder_node.cpp
isaac_ros_yolov8/test/: isaac_ros_yolov8_decoder_node_pol.py
isaac_ros_yolov8/test/dummy_model/yolov8/: dummy_yolov8s.onnx
isaac_ros_yolov8/test/test_cases/single_detection/: camera_info.json  image.json
resources/: yolov8s_fp16.onnx
(+1 files in other folders)
