<?xml version="1.0"?>

<!--
Copyright (c) 2022, NVIDIA CORPORATION.  All rights reserved.

NVIDIA CORPORATION and its licensors retain all intellectual property
and proprietary rights in and to this software, related documentation
and any modifications thereto.  Any use, reproduction, disclosure or
distribution of this software and related documentation without an express
license agreement from NVIDIA CORPORATION is strictly prohibited.
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_detectnet</name>
  <version>0.9.0</version>
  <description>DetectNet model processing</description>

  <maintainer email="hemals@nvidia.com">Hemal Shah</maintainer>
  <license>NVIDIA Isaac ROS Software License</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>Herón Ordóñez Guillén</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>
  <depend>vision_msgs</depend>
  <depend>isaac_ros_dnn_encoders</depend>
  <depend>isaac_ros_nvengine_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>isaac_ros_test</test_depend>
  <test_depend>isaac_ros_nvengine</test_depend>

  <exec_depend>isaac_ros_nvengine</exec_depend>
  <exec_depend>isaac_ros_triton</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
