<?xml version="1.0"?>

<!--
SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

SPDX-License-Identifier: Apache-2.0
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_grounding_dino</name>
  <version>4.0.0</version>
  <description>Grounding DINO model processing</description>

  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>Toya Takahashi</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>eigen</depend>
  <depend>gxf_isaac_optimizer</depend>
  <depend>isaac_ros_grounding_dino_interfaces</depend>
  <depend>isaac_ros_managed_nitros</depend>
  <depend>isaac_ros_nitros</depend>
  <depend>isaac_ros_nitros_bridge_interfaces</depend>
  <depend>isaac_ros_nitros_tensor_list_type</depend>
  <depend>isaac_ros_tensor_list_interfaces</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>vision_msgs</depend>
  <depend>isaac_ros_grounding_dino_models_install</depend>

  <build_depend>isaac_ros_common</build_depend>

  <exec_depend>isaac_ros_dnn_image_encoder</exec_depend>
  <exec_depend>isaac_ros_image_proc</exec_depend>
  <exec_depend>isaac_ros_tensor_rt</exec_depend>


  <!-- NOTE: The following dependencies are needed but commented out -->
  <!-- because bloom-generate cannot yet handle pip dependencies correctly. -->
  <!-- <exec_depend>python3-transformers-pip</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>isaac_ros_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
